# polycode

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CNAME  Dockerfile  PROJECT.md  README.md  entrypooint.sh  index.html  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml  landingpage.yaml  main.yaml  test.yaml
apps/landing/: .env.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/landing/src/: App.tsx  index.css
apps/landing/src/components/: Footer.tsx  Header.tsx
apps/landing/src/pages/: Home.tsx
apps/polycode/: .dockerignore  .env.example  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  entrypooint.sh  pyproject.toml
apps/polycode/docs/: ARCHITECTURE.md  CELERY_README.md  CLI_USAGE.md  CONTEXTPLUS.md  FLOWS.md  HOOK_ARCHITECTURE.md  INJECT.md  NIGHTSHIFT.md  PLUGIN.md  PMTOOLS.md  QUICKSTART.md  RETRO.md  SPECIFY.md
apps/polycode/migrations/: env.py
apps/polycode/migrations/versions/: 0a5f21557119_repo_details_and_flow_incolumns.py  1defbd72658b_initial.py
apps/polycode/src/: AGENTS.md  README.md  bootstrap.py  flowbase.py  glm.py
apps/polycode/src/agentsmd/: __init__.py  injector.py  loader_tool.py  module.py
apps/polycode/src/celery_tasks/: __init__.py  celery_config.py  tasks.py  worker.py
apps/polycode/src/channels/: __init__.py  base.py  dispatcher.py  hooks.py  types.py
apps/polycode/src/cli/: __init__.py  db.py  flow.py  main.py  project.py  server.py  utils.py  worker.py
apps/polycode/src/crews/: __init__.py  base.py
apps/polycode/src/feature_dev/: __init__.py  types.py
apps/polycode/src/flows/: __init__.py  base.py  protocol.py  (+1 more)
apps/polycode/task_templates/: custom_generate_result.md
apps/polycode/tests/: test_agents_md_loader.py  test_agentsmd_module.py  test_context_injector.py  test_flows.py  test_gitcore.py  test_project_manager_plugin.py  test_retro.py
assets/: index-B4GuOtwE.css  index-BRxmYds6.js  index-BdlN_hxU.css  index-C9QxfGXE.css  index-CVrzrf2h.css  index-Cqg4PTRA.css  index-Csi4ZjB-.js  index-Devzk6qY.js  index-ruqRpsC4.js  index-zMd5zVg9.js
deployment/: Makefile  infra.env  polycode.hcl
src/: README.md  flowbase.py  glm.py
src/bug_fix/: __init__.py  constants.py  main.py  types.py
src/celery_tasks/: __init__.py  celery_config.py  tasks.py  worker.py
src/channels/: dispatcher.py
src/channels/github/: channel.py
src/channels/stream/: __init__.py  config.py  server.py  server_app.py
src/crews/: __init__.py
src/crews/conversation_crew/: conversation_crew.py
src/crews/implement_crew/: implement_crew.py
src/crews/plan_crew/: __init__.py  plan_crew.py  types.py
src/crews/review_crew/: __init__.py  types.py
src/crews/streaming/: callback.py  publisher.py  types.py
src/crews/test_crew/: test_crew.py  types.py
src/crews/verify_crew/: __init__.py
src/feature_dev/: __init__.py  constants.py  db.py  github_status.py  main.py  persistence.py  types.py  utils.py  webhooks.py
src/github_app/: __init__.py  app.py  auth.py  config.py  installation_manager.py  models.py  webhook_handler.py
src/github_issues/: github_project.py  main.py  utils.py
src/persistence/: celery_tasks.py  postgres.py
src/project_manager/: README.md  __init__.py  base.py  cli.py  config.py  flow_runner.py  git_utils.py  github.py  github_conversation.py  github_projects_client.py  types.py  watch_cli.py  watcher.py  webhook.py
src/project_manager/conversation/: __init__.py  flow.py  types.py
src/ralph/: __init__.py  types.py
src/ralph/crews/: __init__.py
src/solcraft/: __init__.py  types.py
src/tools/: __init__.py  agents_md_loader.py  directory_read_tool.py  exec_tool.py  file_read_tool.py  git_tool.py
task_templates/: custom_implement.md
(+178 files in other folders)
