[project]
name = "coding_farm"
version = "0.1.0"
description = "Antfarm workflows implemented with CrewAI - Multi-agent software development automation"
readme = "README.md"
requires-python = ">=3.10,<=3.13.12"
dependencies = [
    "crewai[litellm,tools]>=0.152.0",
    "click>=8.0.0",
    "gitpython>=3.1.0",
    "pygithub>=2.8.1",
    "pathspec>=0.12.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.27.0",
]

[project.scripts]
bug_fix = "bug_fix.main:kickoff"
bug_fix_plot = "bug_fix.main:plot"
feature_dev = "feature_dev.main:kickoff"
feature_dev_plot = "feature_dev.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bug_fix"]

[dependency-groups]
dev = ["ruff>=0.15.4"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
