[project]
name = "coding_farm"
version = "0.1.0"
description = "Antfarm workflows implemented with CrewAI - Multi-agent software development automation"
readme = "README.md"
requires-python = ">=3.10,<=3.13.12"
dependencies = [
    "crewai[litellm,tools]>=0.152.0",
    "click>=8.0.0",
    "gitpython>=3.1.0",
    "pygithub>=2.8.1",
    "pathspec>=0.12.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "flower>=2.0.1",
]

[project.scripts]
github = "github_issues.main:main"
daemon = "github_issues.main:main"
watch-repo = "project_manager.cli:cli"
webhook-server = "project_manager.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/bug_fix",
    "src/github_issues",
    "src/project_manager",
    "src/persistence",
    "src/celery_tasks",
]

[dependency-groups]
dev = ["ruff>=0.15.4"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
