[project]
name = "coding_farm"
version = "0.1.0"
description = "Antfarm workflows implemented with CrewAI - Multi-agent software development automation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.4.0",
    "click>=8.0.0",
    "crewai[litellm]>=1.10.0b1",
    "crewai-tools>=0.76.0",
    "fastapi>=0.115.0",
    "flower>=2.0.1",
    "gitpython>=3.1.0",
    "httpx>=0.27.0",
    "ollama>=0.6.1",
    "pathspec>=0.12.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.0.0",
    "pygithub>=2.8.1",
    "pyjwt[crypto]>=2.9.0",
    "python-dotenv>=1.0.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.22",
    "ty>=0.0.21",
    "uvicorn[standard]>=0.32.0",
    "pytest>=9.0.2",
]

[project.scripts]
site = "static_site:main"
example = "feature_dev:example"
ralph = "ralph:example"
ralph_plot = "ralph:plot"
github = "github_issues.main:main"
daemon = "github_issues.main:main"
watch-repo = "project_manager.cli:cli"
webhook-server = "project_manager.cli:cli"
github-issue = "project_manager.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/bug_fix",
    "src/github_app",
    "src/github_issues",
    "src/project_manager",
    "src/persistence",
    "src/celery_tasks",
]

[dependency-groups]
dev = ["ruff>=0.15.4"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pycodestyle]
count = false
ignore = ["E226", "E302", "E71"]
max-line-length = 160
statistics = true
